@@ -7,17 +7,15 @@
 		http://www.springframework.org/schema/beans/spring-beans-3.0.xsd
 		http://www.springframework.org/schema/aop
 		http://www.springframework.org/schema/aop/spring-aop-3.0.xsd">
-
-	<!-- ====================================================== -->
-	<!-- Search class from Generic-Search DAO -->
-	<!-- ====================================================== -->
-
-	<bean id="jdbcSearchSupport" class="com.pennant.backend.dao.impl.JdbcSearchSupportImpl">
-		<constructor-arg ref="dataSource" />
+		
+	<bean id="searchProcessor" class="com.pennanttech.pennapps.jdbc.search.SearchProcessor">
+		<constructor-arg name="dataSource" ref="dataSource" />
 	</bean>
-
-	<bean id="jdbcExtSearchSupport" class="com.pennant.backend.dao.impl.JdbcSearchSupportImpl">
-		<constructor-arg ref="extDatasource" />
+	<bean id="auditSearchProcessor" class="com.pennanttech.pennapps.jdbc.search.SearchProcessor">
+		<constructor-arg name="dataSource" ref="auditDatasource"/>
+	</bean>
+	<bean id="extSearchProcessor" class="com.pennanttech.pennapps.jdbc.search.SearchProcessor">
+		<constructor-arg name="dataSource" ref="extDatasource" />
 	</bean>
 
 	<!-- ====================================================== -->
@@ -180,14 +178,16 @@
 		<property name="dataSource" ref="secDatasource" />
 	</bean>
 
-	<bean name="pagedListService" class="com.pennant.backend.service.impl.PagedListServiceImpl"
-		scope="session">
-		<property name="jdbcSearchSupport" ref="jdbcSearchSupport" />
+	<bean name="pagedListService" class="com.pennant.backend.service.impl.PagedListServiceImpl" scope="session">
+		<property name="searchProcessor" ref="searchProcessor" />
+	</bean>
+	
+	<bean name="auditPagedListService" class="com.pennant.backend.service.impl.PagedListServiceImpl" scope="session">
+		<property name="searchProcessor" ref="auditSearchProcessor" />
 	</bean>
 
-	<bean name="extPagedListService" class="com.pennant.backend.service.impl.PagedListServiceImpl"
-		scope="session">
-		<property name="jdbcSearchSupport" ref="jdbcExtSearchSupport" />
+	<bean name="extPagedListService" class="com.pennant.backend.service.impl.PagedListServiceImpl" scope="session">
+		<property name="searchProcessor" ref="extSearchProcessor" />
 	</bean>
 
 	<!-- ====================================================== -->
